# exchange

./: Cargo.toml  README.md  clearing.ini  client.ini  gateway.ini  matching_engine.ini
clearing_connection/: Cargo.toml
clearing_connection/src/: clearclearingconnection.rs  clearingconnection.rs  clearprotocol.rs  genericclearingprotocol.rs  lib.rs  mockclearingconnection.rs
clearing_engine/: Cargo.toml
clearing_engine/src/: main.rs
client/: Cargo.toml
client/src/: main.rs
dbhook/: Cargo.toml
dbhook/src/: factory.rs  genericdb.rs  inmemduckdb.rs  lib.rs  mockdb.rs  pgsqldb.rs
disseminator/: Cargo.toml
disseminator/src/: disseminator.rs  lib.rs  mbooepdisseminator.rs  mockdisseminator.rs
doc/: TODO.md  architecture.md  clear_protocol.md  feed_protocol.md  gateway.md  matching_engine.md  order_entry_protocol.md  trading.sql
gateway/: Cargo.toml
gateway/src/: connection_factory.rs  main.rs  messages.rs
instruments/: Cargo.toml
instruments/src/: genericinstrumentlist.rs  instrument.rs  instrumentlist.rs  lib.rs  mockinstrumentlist.rs
market/: Cargo.toml
market/src/: lib.rs
matching_engine/: Cargo.toml  matching_engine_probes.d
matching_engine/src/: main.rs  processor.rs
oep/: Cargo.toml
oep/src/: cancel.rs  connection.rs  decoder.rs  execution_report.rs  header.rs  lib.rs  login.rs  modify.rs  neworder.rs  oep_message.rs  sessioninfo.rs  tests.rs  trade.rs
order/: Cargo.toml
order/src/: lib.rs
py_client/: client.py  oep.py
tests/: Cargo.toml
tests/src/: lib.rs  test_exchange.rs
utils/: Cargo.toml
utils/src/: config.rs  network.rs
