[package]
name = "clearing_connection"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
polling = "3.4.0"
socket2 = { version = "0.5.3", features = ["all"] }
disseminator = { path = "../disseminator" }
instruments = { path = "../instruments" }
market = { path = "../market" }
